--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <i class="fa fa-users" aria-hidden="true"></i>
         <span>
           <h3>Residentes</h3>
-          <p>Tabela de Registro de Idosos</p>
+          <p>Tabela de Registro de Vovós e Vovôs</p>
         </span>
       </div>
       <div class="card">
